assets/sass/components/_chat-header.scss
.chat-header {
  @extend %next-to-sidebar;

  background: var(--body-bg);
  font-size: var(--h1-font-size);
  padding-top: var(--gutter);
  padding-bottom: var(--gutter-small);
  box-shadow: 0 4px 5px -3px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: baseline;
  top: 0;
  z-index: 900;

  @include if_screen("<=two-columns") {
    background: var(--sidebar-left-bg);
    color: var(--sidebar-left-text);
    padding-top: var(--gutter-small);
    border-bottom: 0;
  }

  > * {
    display: block;
  }

  h1 {
    font-size: inherit;
    line-height: var(--h1-font-size);
    height: var(--h1-font-size);
    margin: 0;
    white-space: pre;
    max-width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;
    flex-shrink: 0;

    @include if_screen("<=two-columns") {
      flex: 1 0 0;
    }
  }

  .btn {
    background: transparent;
    color: var(--link-color);
    border: none;
    box-shadow: none;
    padding: 0.1rem;
    line-height: 1rem;
    height: 2rem;
    margin-left: 0.2rem;

    &.for-phone-slash,
    &.for-video-slash {
      color: var(--button-danger-bg);
    }
  }

  a {
    color: inherit;

    &:hover {
      filter: brightness(1.3);
    }

    & + a {
      margin-left: var(--gutter-small);
    }
  }

  @include if_screen("<=two-columns") {
    a,
    .btn {
      color: var(--sidebar-left-text);
    }
  }

  small {
    margin-left: 0.3rem;
  }

  .fas {
    font-size: 0.6em;
    text-align: right;
    width: 1.2em;
  }

  .chat-header__topic {
    font-size: 0.9rem;
    font-style: italic;
    text-overflow: ellipsis;
    white-space: pre;
    padding-right: 0.2rem; // Fix that weird cutoff becuase of italic font-style and overflow rules
    overflow: hidden;
    flex: 1 0 0;

    &::before {
      content: '';
      padding-right: 1rem;
    }

    @include if_screen("<=two-columns") {
      display: none;
    }
  }

  .has-tooltip[data-tooltip]:focus:after,
  .has-tooltip[data-tooltip]:hover:after {
    left: 50%;
    transform: translateX(-50%);
  }
}

.chat-header__hamburger {
  display: none;

  @include if_screen("<=two-columns") {
    display: block;
  }

  i {
    transition: transform 0.3s;
  }

  .chat-header__unread {
    background: var(--sidebar-left-bg);
    font-size: 0.9rem;
    text-align: center;
    line-height: 1.4em;
    border-radius: 50%;
    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
    width: 1.2em;
    height: 1.2em;
    display: block;
    position: absolute;
    bottom: 0.65rem;
    right: 1rem;
  }
}

@include if_screen("<=two-columns") {
  .is-logged-out .chat-header {
    position: static;
    padding: var(--gutter-big);
    padding-top: 0;
  }
}

